# mys-bot

./: .env.prod  .gitignore  README.md  pyproject.toml  requirements.txt
migrations/versions/: 367c41acf90c_.py  8dc8cac678ec_.py
mys_bot/bh3code/: data_source.py
mys_bot/bh3sign/: __init__.py
mys_bot/gssign/: __init__.py
mys_bot/mys_api/: api.py
mys_bot/nonebot_plugin_bh3code/: __init__.py
mys_bot/nonebot_plugin_bh3sign/: __init__.py
mys_bot/nonebot_plugin_gscode/: data_source.py
mys_bot/nonebot_plugin_gssign/: __init__.py
mys_bot/nonebot_plugin_mys_api/: api.py
mys_bot/nonebot_plugin_sr_daily_note/: __init__.py
mys_bot/nonebot_plugin_srsign/: __init__.py
mys_bot/nonebot_plugin_user_bind/: __init__.py
mys_bot/nonebot_plugin_zzzcode/: __init__.py  data_source.py
mys_bot/nonebot_plugin_zzzsign/: __init__.py
mys_bot/srsign/: __init__.py
mys_bot/user_bind/: __init__.py  cookie.py  data_source.py  model.py
mys_bot/zzzcode/: __init__.py
mys_bot/zzzsign/: __init__.py
